--- a/themes/landscape/source/css/_partial/sidebar.styl
+++ b/themes/landscape/source/css/_partial/sidebar.styl
@@ -17,6 +17,13 @@ else
       list-style: disc
     ol
       list-style: decimal
+  .icons
+    margin-top: 1em
+    a
+      display: inline-block
+      width: 32px;
+      height: 32px;
+      margin-right: 1em;
 
 .category-list-count
 .tag-list-count
