--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -6,11 +6,12 @@ vendor-prefixes = webkit moz ms official
 color-default = #555
 color-grey = #999
 color-border = #ddd
-color-link = #258fb8
-color-background = #eee
+color-link = #C60
+color-background = #ece9e4
+color-content-background = #fffaf3 
 color-sidebar-text = #777
-color-widget-background = #ddd
-color-widget-border = #ccc
+color-widget-background = color-content-background
+color-widget-border = transparent
 color-footer-background = #262a30
 color-mobile-nav-background = #191919
 color-twitter = #00aced
@@ -20,24 +21,23 @@ color-google = #dd4b39
 color-linkedin = #0077B5
 
 // Fonts
-font-sans = -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif
-font-serif = Georgia, "Times New Roman", serif
-font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
+font-sans = "Roboto", sans-serif
+font-serif = "Lora", serif
+font-mono = "Fira Code", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
-font-size = 14px
+font-mono-path = "fonts/FiraCode-regular"
+font-mono-version = "1.206"
+font-size = 18px
 line-height = 1.6em
 line-height-title = 1.1em
 
 // Header
 logo-size = 40px
-subtitle-size = 16px
+subtitle-size = 20px
 banner-height = 300px
-banner-url = "images/banner.jpg"
+banner-url = "images/headers/motherboard.jpg"
 
 sidebar = hexo-config("sidebar")
 
