--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -27,8 +27,6 @@
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
-  <% if (config.highlight.enable){ %>
-    <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
-  <% } %>
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Roboto:300,400,700" rel="stylesheet">
   <%- css('css/style') %>
 </head>
