--- a/themes/landscape/source/css/_extend.styl
+++ b/themes/landscape/source/css/_extend.styl
@@ -6,21 +6,27 @@ $block-caption
   margin-bottom: 1em
   margin-left: 5px
   line-height: 1em
-  text-shadow: 0 1px #fff
+  text-shadow: 0 1px #fffaf3
   font-weight: bold
 
 $block
-  background: #fff
-  box-shadow: 1px 2px 3px #ddd
-  border: 1px solid color-border
-  border-radius: 3px
+  background: #fffaf3
+  box-shadow: 1px 2px 3px #c3beb5
+  border: none
+  border-radius: 0
 
 $base-style
   h1
+    font-family: font-sans
+    font-weight: 300
     font-size: 2em
   h2
+    font-family: font-sans
+    font-weight: 300
     font-size: 1.5em
   h3
+    font-family: font-sans
+    font-weight: 300
     font-size: 1.3em
   h4
     font-size: 1.2em
