--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -16,7 +16,7 @@
   float: left
   line-height: 1em
   color: #ccc
-  text-shadow: 0 1px #fff
+  text-shadow: 0 1px color-content-background
   margin-left: 8px
   &:before
     content: "\2022"
@@ -31,7 +31,8 @@
 .article-title
   text-decoration: none
   font-size: 2em
-  font-weight: bold
+  font-family: font-sans
+  font-weight: 300
   color: color-default
   line-height: line-height-title
   transition: color 0.2s
@@ -47,7 +48,7 @@
     line-height: line-height
     margin: line-height 0
   h1, h2, h3, h4, h5, h6
-    font-weight: bold
+    font-weight: 300
   h1, h2, h3, h4, h5, h6
     line-height: line-height-title
     margin: line-height-title 0
@@ -128,11 +129,11 @@
   border-radius: 15px
   background: color-background
   color: color-grey
-  text-shadow: 0 1px #fff
+  text-shadow: 0 1px color-content-background
   text-decoration: none
   &:hover
     background: color-link
-    color: #fff
+    color: color-content-background
     text-decoration: none
     text-shadow: 0 1px darken(color-link, 20%)
 
@@ -182,12 +183,12 @@
       absolute-center(8px)
       content: ""
       border-radius: 50%
-      background: color-border
-      box-shadow: 0 1px 2px #fff
+      background: color-grey
+      box-shadow: 0 1px 2px color-content-background
 
 .article-nav-link-wrap
   text-decoration: none
-  text-shadow: 0 1px #fff
+  text-shadow: 0 1px color-content-background
   color: color-grey
   box-sizing: border-box
   margin-top: block-margin
@@ -214,7 +215,7 @@
 .article-nav-caption
   text-transform: uppercase
   letter-spacing: 2px
-  color: color-border
+  color: color-grey
   line-height: 1em
   font-weight: bold
   #article-nav-newer &
@@ -222,13 +223,14 @@
 
 .article-nav-title
   font-size: 0.85em
+  font-family: font-sans
   line-height: line-height
   margin-top: 0.5em
 
 .article-share-box
   position: absolute
   display: none
-  background: #fff
+  background: color-content-background
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2)
   border-radius: 3px
   margin-left: -145px
@@ -261,14 +263,14 @@ $article-share-link
   float: left
   position: relative
   color: #999
-  text-shadow: 0 1px #fff
+  text-shadow: 0 1px color-content-background
   &:before
     font-size: 20px
     font-family: font-icon
     absolute-center(@font-size)
     text-align: center
   &:hover
-    color: #fff
+    color: color-content-background
 
 .article-share-twitter
   @extend $article-share-link
