--- a/themes/landscape/source/css/_partial/comment.styl
+++ b/themes/landscape/source/css/_partial/comment.styl
@@ -1,9 +1,9 @@
 #comments
-  background: #fff
-  box-shadow: 1px 2px 3px #ddd
+  background: #fffaf3
+  box-shadow: 1px 2px 3px #c3beb5
   padding: article-padding
-  border: 1px solid color-border
-  border-radius: 3px
+  border: none
+  border-radius: 0
   margin: block-margin 0
   a
     color: color-link
