--- a/themes/landscape/source/css/_partial/highlight.styl
+++ b/themes/landscape/source/css/_partial/highlight.styl
@@ -30,6 +30,7 @@ $line-numbers
 .article-entry
   pre, code
     font-family: font-mono
+    font-size: 0.85em;
   code
     background: color-background
     text-shadow: 0 1px #fff
