--- a/themes/landscape/source/css/_partial/sidebar-aside.styl
+++ b/themes/landscape/source/css/_partial/sidebar-aside.styl
@@ -10,12 +10,11 @@
 
 .widget
   color: color-sidebar-text
-  text-shadow: 0 1px #fff
   background: color-widget-background
-  box-shadow: 0 -1px 4px color-widget-border inset
-  border: 1px solid color-widget-border
+  box-shadow: 1px 2px 3px #c3beb5
+  border: none
   padding: 15px
-  border-radius: 3px
+  border-radius: 0
   a
     color: color-link
     text-decoration: none
