--- a/themes/landscape/source/css/_partial/sidebar.styl
+++ b/themes/landscape/source/css/_partial/sidebar.styl
@@ -7,7 +7,8 @@ else
   @extend $base-style
   line-height: line-height
   word-wrap: break-word
-  font-size: 0.9em
+  font-family: font-sans
+  font-size: 0.8em
   ul, ol
     list-style: none
     margin: 0
