Cleaned up all old posts, and made minor design adjustments

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -46,7 +46,7 @@
   padding: 0 article-padding
   p, table
     line-height: line-height
-    margin: line-height 0
+    margin: 1em 0
   h1, h2, h3, h4, h5, h6
     font-weight: 300
   h1, h2, h3, h4, h5, h6
