--- a/themes/landscape/source/css/_partial/mobile.styl
+++ b/themes/landscape/source/css/_partial/mobile.styl
@@ -17,3 +17,15 @@
     font-weight: bold
     &:hover
       color: #fff
+
+@media mq-mobile
+  .article-title
+    font-size: 1.6em;
+  .article-entry pre, .article-entry .highlight .gutter pre
+    font-size: 0.6em;
+    line-height: 1.2em;
+
+
+@media mq-mobile
+  .outer
+    padding: 0 (gutter-width / 2)
