--- a/themes/landscape/source/css/_extend.styl
+++ b/themes/landscape/source/css/_extend.styl
@@ -8,12 +8,17 @@ $block-caption
   line-height: 1em
   text-shadow: 0 1px #fffaf3
   font-weight: bold
+  @media (prefers-color-scheme: dark)
+    text-shadow: 0 1px #111
 
 $block
   background: #fffaf3
   box-shadow: 1px 2px 3px #c3beb5
   border: none
   border-radius: 0
+  @media (prefers-color-scheme: dark)
+    background: color-dark-grey
+    box-shadow: 1px 2px 3px #222
 
 $base-style
   h1
