--- a/themes/landscape/source/css/_partial/archive.styl
+++ b/themes/landscape/source/css/_partial/archive.styl
@@ -33,6 +33,8 @@
   line-height: line-height
   &:hover
     color: color-link
+  @media (prefers-color-scheme: dark)
+    color: color-grey
 
 .archive-article-footer
   margin-top: 1em
@@ -78,3 +80,7 @@
     font-weight: bold
   .space
     color: color-border
+  @media (prefers-color-scheme: dark)
+    background: color-dark-grey
+    box-shadow: 1px 2px 3px #222
+    border-color: color-default
