--- a/themes/landscape/source/css/_partial/sidebar-aside.styl
+++ b/themes/landscape/source/css/_partial/sidebar-aside.styl
@@ -24,3 +24,7 @@
     ul, ol, dl
       margin-left: 15px
       list-style: disc
+  @media (prefers-color-scheme: dark)
+    color: color-grey
+    background: color-dark-grey
+    box-shadow: 1px 2px 3px #111;
