--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -3,6 +3,7 @@ support-for-ie = false
 vendor-prefixes = webkit moz ms official
 
 // Colors
+color-dark-grey = #333;
 color-default = #555
 color-grey = #999
 color-border = #ddd
