Added a few links to other stuff and fixed a link i dark mode

--- a/themes/landscape/layout/_widget/info.ejs
+++ b/themes/landscape/layout/_widget/info.ejs
@@ -22,3 +22,16 @@
         </div>
     </div>
 </div>
+
+<div class="widget-wrap">
+    <h3 class="widget-title">Other stuff</h3>
+    <div class="widget">
+        <p>Aside from the blog, I also host some other stuff:</p>
+        <br>
+        <ul>
+            <li><a href="/lösenfras">Lösenfras</a>, a Swedish pass phrase generator (even more secure than English!)</li>
+            <li><a href="/ps2files">A mirror of the IBM PS/2 Files archive</a>, containing starter and utility disks for all PS/2 models</li>
+            <li><a href="https://deaddrop.at">deaddrop.at</a>, a super-simple file-share thingy.</li>
+        </ul>
+    </div>
+</div>
