--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -193,6 +193,8 @@
 .article-nav-link-wrap
   text-decoration: none
   text-shadow: 0 1px color-content-background
+  @media (prefers-color-scheme: dark)
+    text-shadow: 0 1px #111
   color: color-grey
   box-sizing: border-box
   margin-top: block-margin
