Fixed css bug with mobile menu and made block quotes prettier

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -82,9 +82,17 @@
     padding: 10px 0
   blockquote
     font-family: font-serif
-    font-size: 1.4em
+    //font-size: 1.4em
     margin: line-height 20px
-    text-align: center
+    //text-align: center
+    padding-left: 2.5em
+    position: relative
+    &:before
+      content: '\201C'
+      font-size: 5em
+      position: absolute
+      top: -15px
+      left: 0
     footer
       font-size: font-size
       margin: line-height 0
