--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -66,8 +66,8 @@ body
 #container
   position: relative
 
-.mobile-nav-on
-  overflow: hidden
+// .mobile-nav-on
+//   overflow: hidden
 
 #wrap
   height: 100%
