Finished the Amiga/CF post, and made some font size and margin adjustments

--- a/themes/landscape/source/css/_partial/mobile.styl
+++ b/themes/landscape/source/css/_partial/mobile.styl
@@ -19,6 +19,8 @@
       color: #fff
 
 @media mq-mobile
+  body
+    font-size: 15px
   .article-title
     font-size: 1.6em;
   .article-entry pre, .article-entry .highlight .gutter pre
