--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -35,6 +35,7 @@
   font-weight: 300
   color: color-default
   line-height: line-height-title
+  margin-bottom: 1em
   transition: color 0.2s
   @media (prefers-color-scheme: dark)
     color: color-grey
@@ -48,12 +49,12 @@
   padding: 0 article-padding
   p, table
     line-height: line-height
-    margin: 1em 0
+    margin-bottom: 1em
   h1, h2, h3, h4, h5, h6
     font-weight: 300
   h1, h2, h3, h4, h5, h6
     line-height: line-height-title
-    margin: line-height-title 0
+    margin: line-height-title 0 0.5em 0
   a
     color: color-link
     text-decoration: none
@@ -66,7 +67,7 @@
     max-width: 100%
     height: auto
     display: block
-    margin: auto
+    margin: 1em auto
   iframe
     border: none
   table
