--- a/themes/landscape/source/css/_partial/highlight.styl
+++ b/themes/landscape/source/css/_partial/highlight.styl
@@ -15,7 +15,7 @@ highlight-purple = #cc99cc
 
 $code-block
   background: highlight-background
-  margin: 0 article-padding * -1
+  margin: 0 article-padding * -1 1em article-padding * -1
   padding: 15px article-padding
   border-style: solid
   border-color: color-border
