Upgraded hexo and other packages, and fixed a bug in the theme

--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -81,6 +81,10 @@ body
   .mobile-nav-on &
     left: mobile-nav-width
 
+@media (prefers-color-scheme: dark)
+  #wrap
+    background: #000
+
 if sidebar and sidebar isnt bottom
   #main
     @media mq-normal
