Replace google analytics with matomo

--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <%- partial('google-analytics') %>
+  <%- partial('matomo-analytics') %>
   <%
   var title = page.title;
 
