New blog post: Goodbye, Google Analytics, hello Matomo

--- a/themes/landscape/layout/_partial/matomo-analytics.ejs
+++ b/themes/landscape/layout/_partial/matomo-analytics.ejs
@@ -15,5 +15,6 @@
     g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
+<noscript><p><img src="//<%= theme.matomo_analytics_url %>/matomo.php?idsite=<%= theme.matomo_analytics_site %>&amp;rec=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Matomo Code -->
 <% } %>
