--- a/themes/landscape/source/css/_partial/sidebar.styl
+++ b/themes/landscape/source/css/_partial/sidebar.styl
@@ -25,6 +25,9 @@ else
       width: 32px;
       height: 32px;
       margin-right: 0.75em;
+    img
+      height: 100%;
+      width: 100%;
 
 .category-list-count
 .tag-list-count
