Mastodon-icon-fix

--- a/themes/landscape/layout/_widget/info.ejs
+++ b/themes/landscape/layout/_widget/info.ejs
@@ -8,7 +8,7 @@
                 <a rel="me" title="twitter" href="https://twitter.com/<%= config.contact.twitter %>"><img src="/css/images/twitter.svg"></a>
             <% } %>
             <% if (config.contact.mastodon){ %>
-                <a rel="me" title="mastodon" href="https://<%= config.contact.mastodon %>"><img src="/css/images/mastodon.svg"></a>
+                <a rel="me" title="mastodon" href="https://<%= config.contact.mastodon %>"><img style="height: 32px" src="/css/images/mastodon.svg"></a>
             <% } %>
             <% if (config.contact.github){ %>
                 <a rel="me" title="github" href="https://github.com/<%= config.contact.github %>"><img src="/css/images/github.svg"></a>
