--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -9,6 +9,7 @@
       This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />
       <%= __('powered_by') %> <a href="https://hexo.io/" target="_blank">Hexo</a>
       <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+      <div>Most of the page is typeset with Gorton Perfected, which is under copyright by Aresluna, LLC, and is used in accordance with its <a href="/css/fonts/Gorton_Perfected_license.txt">license</a>.</div>
     </div>
   </div>
 </footer>
