--- a/themes/landscape/source/css/_extend.styl
+++ b/themes/landscape/source/css/_extend.styl
@@ -7,7 +7,7 @@ $block-caption
   margin-left: 5px
   line-height: 1em
   text-shadow: 0 1px #fffaf3
-  font-weight: bold
+  font-weight: 300
   @media (prefers-color-scheme: dark)
     text-shadow: 0 1px #111
 
