--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -9,7 +9,7 @@ color-grey = #999
 color-border = #ddd
 color-link = #C60
 color-background = #ece9e4
-color-content-background = #fffaf3 
+color-content-background = #fffaf3
 color-sidebar-text = #777
 color-widget-background = color-content-background
 color-widget-border = transparent
@@ -22,13 +22,14 @@ color-google = #dd4b39
 color-linkedin = #0077B5
 
 // Fonts
-font-sans = "Roboto", sans-serif
-font-serif = "Lora", serif
+font-sans = "GortonPerfected", "Roboto", sans-serif
+font-serif = Cambria, Baskerville, serif
 font-mono = "Fira Code", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
 font-mono-path = "fonts/FiraCode-regular"
+font-sans-path = "fonts/GortonPerfectedVF"
 font-mono-version = "1.206"
 font-size = 18px
 line-height = 1.6em
