--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -13,6 +13,11 @@ input, button
     padding: 0
 
 @font-face
+  font-family: GortonPerfected
+  src: url(font-sans-path + ".woff2") format("woff2"),
+       url(font-sans-path + ".woff") format("woff")
+
+@font-face
   font-family: FontAwesome
   font-style: normal
   font-weight: normal
@@ -34,7 +39,7 @@ html, body, #container
 
 body
   background: color-background
-  font: font-size font-serif
+  font: font-size font-sans
   -webkit-text-size-adjust: 100%
 
 @media (prefers-color-scheme: dark)
